# drops2

./: README.md  cbmaker.sh
param/poisson/cdrdrops/: instatpoissonEx.json  instatpoissonEx0.json  instatpoissonEx1.json  instatpoissonEx2.json  instatpoissonEx3.json  instatpoissonEx4.json  statpoissonEx.json
param/surfactant/surfactant/: surfactant.json  surfpatternfm.json
param/surfphasesep/: No_Bnd_Condition_ch.json  separation.json  separationGeneral.json  separationRotate.json  separation_constantwind.json  separation_mergesphere.json  separation_mergesphere_bak.json
src/misc/: params.cpp  params.h
src/num/: fe.h
src/poisson/: cdrdrops.cpp  cdrdrops2.cpp  poisson.h  poisson.tpp  poissonCoeff.cpp  poissonParam.h
src/surfactant/: CMakeLists.txt  heatequation.cpp  heatsolver.h  ifacetransp.cpp  ifacetransp.h  ifacetransp.tpp  patternformulation.h  surfactant.cpp  surfpatternfm.cpp  test_bugs.cpp
src/surfphasesep/: separation.cpp
